ajout projet, impliquez-vous et autre

--- a/impliquez-vous/css/main.css
+++ b/impliquez-vous/css/main.css
@@ -3,7 +3,8 @@
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-.span3{
+.span11{
+	margin-bottom: 15px;
 }
 .mission {
 	background-color: #F6B427;
