--- a/impliquez-vous/css/main.css
+++ b/impliquez-vous/css/main.css
@@ -13,6 +13,16 @@
 	width: 260px;
 }
 
+.carousel-inner{
+	width: 400px;
+	margin: 0px auto;
+}
+
+#myCarousel{
+	width: 600px;
+	margin: 0px auto;
+}
+
 
 
 
