--- a/faire-un-don/css/main.css
+++ b/faire-un-don/css/main.css
@@ -13,6 +13,28 @@
 	width: 260px;
 }
 
+/* Sticky footer styles
+-------------------------------------------------- */
+/* Set the fixed height of the footer here */
+#push,
+#footer {
+height: 150px;
+}
+#footer {
+background-color: black;
+color: white;
+}
+
+/* Lastly, apply responsive CSS fixes as necessary */
+@media (max-width: 767px) {
+#footer {
+  margin-left: -20px;
+  margin-right: -20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+}
+
 
 
 
